Implemented courses page, fixed bug with login on mobile devices.

--- a/comant-client/src/blocks/courses-list/course-card/course-card.html
+++ b/comant-client/src/blocks/courses-list/course-card/course-card.html
@@ -1,4 +1,4 @@
-<div class="course-card">
+<div class="courses-list__course-card">
     <h3>{{ course.name }}</h3>
     <p>{{ course.description }}</p>
     <p>{{ course.startsOn | dateComponents }} - {{ course.endsOn | dateComponents }}</p>
