--- a/comant-client/src/index.html
+++ b/comant-client/src/index.html
@@ -43,6 +43,7 @@
 <script src="scripts/run/loadSiteSettings.js"></script>
 <script src="scripts/run/protectStates.js"></script>
 
+<script src="scripts/blocks/courses-list/coursesList.js"></script>
 <script src="scripts/blocks/courses-overview/CoursesOverviewController.js"></script>
 <script src="scripts/blocks/login-modal/LoginModalController.js"></script>
 <script src="scripts/blocks/login-modal/loginModal.js"></script>
