--- a/comant-client/src/blocks/title-bar/title-bar.html
+++ b/comant-client/src/blocks/title-bar/title-bar.html
@@ -3,7 +3,7 @@
         <li class="name">
             <h1><a href="#">{{ siteName }}</a></h1>
         </li>
-        <li data-toggle-top-bar class="menu-icon"><a href="#">Menu</a></li>
+        <li toggle-top-bar class="menu-icon"><a>Menu</a></li>
     </ul>
 
     <top-bar-section>
@@ -13,7 +13,7 @@
         </ul>
 
         <ul class="right">
-            <li><a ui-sref="logout">Logout</a></li>
+            <li ng-cloak ng-show="currentUser"><a ui-sref="logout">Logout</a></li>
         </ul>
     </top-bar-section>
 </top-bar>
