Backend refactor, added classes API.

--- a/comant-client/src/blocks/courses-list/course-card/course-card.html
+++ b/comant-client/src/blocks/courses-list/course-card/course-card.html
@@ -1,5 +1,5 @@
 <div class="courses-list__course-card">
     <h3>{{ course.name }}</h3>
     <p>{{ course.description }}</p>
-    <p>{{ course.startsOn | dateComponents }} - {{ course.endsOn | dateComponents }}</p>
+    <p>{{ course.startsOn | date }} - {{ course.endsOn | date }}</p>
 </div>
