--- a/comant-client/src/blocks/courses-list/courses-list.html
+++ b/comant-client/src/blocks/courses-list/courses-list.html
@@ -8,7 +8,7 @@
     <div class="small-12 medium-6 large-4 columns"
          ng-repeat="course in from | filter:{name: query}"
          ng-class="{end: $last}">
-        <div ng-include="'blocks/courses-list/course-card/course-card.html'"></div>
+        <course-card course="course"></course-card>
     </div>
 </div>
 
