--- a/comant-client/src/index.html
+++ b/comant-client/src/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<div data-ng-include="'blocks/title-bar/title-bar.html'"></div>
+<div ng-include="'blocks/title-bar/title-bar.html'"></div>
 
-<div data-ui-view></div>
+<div ui-view></div>
 
 <!-- Scripts -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -26,27 +26,9 @@
 <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+<script src="bower_components/moment/min/moment-with-locales.min.js"></script>
 
-<script src="scripts/app.js"></script>
-
-<script src="scripts/config/authenticationInterceptorConfig.js"></script>
-<script src="scripts/config/localStorageConfig.js"></script>
-<script src="scripts/config/stateConfig.js"></script>
-
-<script src="scripts/services/Course.js"></script>
-<script src="scripts/services/session.js"></script>
-<script src="scripts/services/User.js"></script>
-
-<script src="scripts/filters/dateComponents.js"></script>
-
-<script src="scripts/run/loadCurrentUserData.js"></script>
-<script src="scripts/run/loadSiteSettings.js"></script>
-<script src="scripts/run/protectStates.js"></script>
-
-<script src="scripts/blocks/courses-list/coursesList.js"></script>
-<script src="scripts/blocks/courses-overview/CoursesOverviewController.js"></script>
-<script src="scripts/blocks/login-modal/LoginModalController.js"></script>
-<script src="scripts/blocks/login-modal/loginModal.js"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
