Started working on lectures, added license.

--- a/comant-client/src/blocks/title-bar/title-bar.html
+++ b/comant-client/src/blocks/title-bar/title-bar.html
@@ -10,6 +10,7 @@
         <ul class="left">
             <li><a ui-sref="welcome">Welcome</a></li>
             <li><a ui-sref="courses">Courses</a></li>
+            <li><a ui-sref="lectures">Lectures</a></li>
         </ul>
 
         <ul class="right">
