--- a/comant-client/src/index.html
+++ b/comant-client/src/index.html
@@ -26,7 +26,10 @@
 <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
+<script src="bower_components/showdown/dist/showdown.min.js"></script>
+<script src="bower_components/ng-showdown/dist/ng-showdown.min.js"></script>
 
 <script src="app.js"></script>
 
